# ECommerce

./: pyproject.toml
ECommerce/: settings.py
ShoppingCartAdmin/migrations/: 0001_initial.py
ShoppingCartAdmin/templates/: Navigation.html
ShoppingCartAdmin/templates/ShoppingCartAdmin/: Cart.html  DetailsPage.html  HomePage.html  Login.html  Register.html
