[tool.poetry]
name = "ecommerce"
version = "0.1.0"
description = ""
authors = ["Ahmed Taha"]

[tool.poetry.dependencies]
python = "^3.9"
pendulum = "^2.1.2"
Django = "^3.2.5"
django-money = "^2.0.1"
Pillow = "^8.3.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
